Add Automatic-Module-Name to "org.omegat.vldocking"

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,12 @@ sourcesJar {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
+jar {
+    manifest {
+        attributes("Automatic-Module-Name": "org.omegat.vldocking")
+    }
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) { publication ->
